# Labs

./: README.md  lab_1.cpp
BigInt/: BigInt.cpp  BigInt.h  CMakeLists.txt  test.cpp
